--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {
+body,
+#restart-btn {
   font-family: 'Courier New', Courier, monospace;
   display: grid;
   justify-items: center;
@@ -25,4 +26,12 @@ body {
     border: 1px solid grey;
     background: lightyellow;
     cursor: pointer;
+  }
+
+  #restart-btn {
+    margin: 20px;
+    background-color: white;
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 15px;
   }
